--- a/网络传值/Base.lproj/Main.storyboard
+++ b/网络传值/Base.lproj/Main.storyboard
@@ -221,11 +221,115 @@
                     </view>
                     <connections>
                         <outlet property="listTableView" destination="q90-hm-v7p" id="wIo-D0-ipD"/>
+                        <segue destination="KbV-4g-qeY" kind="presentation" identifier="TotalInfoSegue" id="GLN-Zg-lYg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hwh-ax-P1A" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2341.5999999999999" y="119.1904047976012"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Y6S-EU-8XL">
+            <objects>
+                <viewController id="KbV-4g-qeY" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="IiK-dr-5SL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="年级" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bp4-oS-b3K">
+                                <rect key="frame" x="50" y="150" width="50" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="CDq-aa-zSM"/>
+                                    <constraint firstAttribute="width" constant="50" id="GSc-KM-UyE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="姓名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tNw-yh-FxY">
+                                <rect key="frame" x="50" y="70" width="50" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="7Th-KZ-iiR"/>
+                                    <constraint firstAttribute="height" constant="30" id="glm-z9-7Ie"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="生日" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BAB-Tq-tas">
+                                <rect key="frame" x="50" y="230" width="50" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="ENX-cy-myM"/>
+                                    <constraint firstAttribute="width" constant="50" id="K8C-Qq-8WD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="电话" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vpw-ac-5cG">
+                                <rect key="frame" x="50" y="310" width="50" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="09F-0Z-1Bl"/>
+                                    <constraint firstAttribute="height" constant="30" id="Dfc-Aw-UGt"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KY8-GW-ZtS">
+                                <rect key="frame" x="130" y="70" width="215" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="b4E-tn-F3R">
+                                <rect key="frame" x="130" y="150" width="215" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iOz-Jp-thd">
+                                <rect key="frame" x="130" y="230" width="215" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hrK-tk-yeM">
+                                <rect key="frame" x="130" y="310" width="215" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Vpw-ac-5cG" firstAttribute="leading" secondItem="QdD-Ko-mFW" secondAttribute="leading" constant="50" id="8e4-Mg-xCL"/>
+                            <constraint firstItem="BAB-Tq-tas" firstAttribute="top" secondItem="bp4-oS-b3K" secondAttribute="bottom" constant="50" id="9Ph-tE-Ee4"/>
+                            <constraint firstItem="iOz-Jp-thd" firstAttribute="bottom" secondItem="BAB-Tq-tas" secondAttribute="bottom" id="Ahq-b2-mjz"/>
+                            <constraint firstItem="iOz-Jp-thd" firstAttribute="leading" secondItem="BAB-Tq-tas" secondAttribute="trailing" constant="30" id="HC2-VJ-ekw"/>
+                            <constraint firstItem="b4E-tn-F3R" firstAttribute="bottom" secondItem="bp4-oS-b3K" secondAttribute="bottom" id="HIn-Bl-gQ7"/>
+                            <constraint firstItem="QdD-Ko-mFW" firstAttribute="trailing" secondItem="KY8-GW-ZtS" secondAttribute="trailing" constant="30" id="Jbp-LB-q9p"/>
+                            <constraint firstItem="KY8-GW-ZtS" firstAttribute="bottom" secondItem="tNw-yh-FxY" secondAttribute="bottom" id="NUM-pE-ib2"/>
+                            <constraint firstItem="hrK-tk-yeM" firstAttribute="bottom" secondItem="Vpw-ac-5cG" secondAttribute="bottom" id="OCV-hU-mSY"/>
+                            <constraint firstItem="tNw-yh-FxY" firstAttribute="leading" secondItem="QdD-Ko-mFW" secondAttribute="leading" constant="50" id="TPS-qN-B5a"/>
+                            <constraint firstItem="tNw-yh-FxY" firstAttribute="top" secondItem="QdD-Ko-mFW" secondAttribute="top" constant="50" id="XYB-q6-Qxb"/>
+                            <constraint firstItem="hrK-tk-yeM" firstAttribute="leading" secondItem="Vpw-ac-5cG" secondAttribute="trailing" constant="30" id="ZyS-iZ-aZF"/>
+                            <constraint firstItem="KY8-GW-ZtS" firstAttribute="leading" secondItem="tNw-yh-FxY" secondAttribute="trailing" constant="30" id="gmi-Ob-TOI"/>
+                            <constraint firstItem="bp4-oS-b3K" firstAttribute="top" secondItem="tNw-yh-FxY" secondAttribute="bottom" constant="50" id="hpu-Xr-FAx"/>
+                            <constraint firstItem="QdD-Ko-mFW" firstAttribute="trailing" secondItem="b4E-tn-F3R" secondAttribute="trailing" constant="30" id="mKb-5w-J2e"/>
+                            <constraint firstItem="bp4-oS-b3K" firstAttribute="leading" secondItem="QdD-Ko-mFW" secondAttribute="leading" constant="50" id="n2p-2E-FUd"/>
+                            <constraint firstItem="b4E-tn-F3R" firstAttribute="leading" secondItem="bp4-oS-b3K" secondAttribute="trailing" constant="30" id="pBo-y4-jZC"/>
+                            <constraint firstItem="QdD-Ko-mFW" firstAttribute="trailing" secondItem="hrK-tk-yeM" secondAttribute="trailing" constant="30" id="qyC-0b-rC1"/>
+                            <constraint firstItem="BAB-Tq-tas" firstAttribute="leading" secondItem="QdD-Ko-mFW" secondAttribute="leading" constant="50" id="usD-wP-urM"/>
+                            <constraint firstItem="Vpw-ac-5cG" firstAttribute="top" secondItem="BAB-Tq-tas" secondAttribute="bottom" constant="50" id="wrr-Pl-79F"/>
+                            <constraint firstItem="QdD-Ko-mFW" firstAttribute="trailing" secondItem="iOz-Jp-thd" secondAttribute="trailing" constant="30" id="x6p-k8-87p"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="QdD-Ko-mFW"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="krt-0E-yty" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3364" y="119"/>
         </scene>
     </scenes>
 </document>
